# polls-app

./: README.md  manage.py  pyproject.toml
.github/workflows/: format-and-lint.yml  run-tests.yml
dev_config/: asgi.py  settings.py  wsgi.py
example_site/: asgi.py  settings.py  urls.py  wsgi.py
src/polls/: models.py  views.py
src/polls/migrations/: 0001_initial.py
tests/: helpers.py  settings.py
tests/models/: test_question_model.py
tests/views/: test_detail_view.py  test_index_view.py  test_results_view.py  test_vote_view.py
