[tool.poetry]
name = "polls-app"
version = "0.1.0"
description = "A simple Django polling application."
readme = "README.md"
packages = [{include = "polls", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.0"
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.8"
black = "^25.1.0"
ruff = "^0.12.9"
ipython = "^9.4.0"

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(\
    \.git
    | \.mypy_cache
    | \.venv
    | build
    | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_site.settings"
python_files = "test_*.py"

[tool.ruff]
target-version = "py312"

exclude = [
	"__pycache__",
	"migrations",
	"db.sqlite3",
	"*.pyc"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 (line too long) is ignored
ignore = ["E501"]