[tool.poetry]
name = "polls-app"
version = "0.1.0"
description = "A simple Django polling application."
readme = "README.md"
packages = [{include = "polls", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^25.1.0"
ruff = "^0.12.9"
ipython = "^9.4.0"
pytest-django = "^4.11.1"

[tool.black]
target-version = ['py312']
exclude = '''
/(\
    \.git
    | \.mypy_cache
    | \.venv
    | build
    | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dev_config.settings"
python_files = "test_*.py"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

exclude = [
	"__pycache__",
	"migrations",
	"db.sqlite3",
	"*.pyc"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 (line too long) is ignored
ignore = ["E501"]