[project]
name = "polls-app"
version = "0.1.0"
description = "A simple Django polling application."
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django>=5.0"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "polls", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^25.1.0"
ruff = "^0.12.9"
ipython = "^9.4.0"
pytest-django = "^4.11.1"

[tool.black]
target-version = ['py312']
exclude = '''
/(\
    \.git
    | \.mypy_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dev_config.settings"
python_files = "test_*.py"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "migrations",
    "db.sqlite3",
    "*.pyc"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"] # E501 (line too long) is ignored
